Skill new version (#338)
* Update Skill #298.

* Update Skill #298.

* Update Skill #298.

* Update the script,